feat: solve working